<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_openings"
            android:icon="@drawable/icon_pawn"
            android:title="@string/text_openings" />

        <item
            android:id="@+id/nav_checkmates"
            android:icon="@drawable/icon_king"
            android:title="@string/text_checkmates" />

        <item
            android:id="@+id/nav_tactics"
            android:icon="@drawable/icon_knight"
            android:title="@string/text_tactics" />

        <item
            android:id="@+id/nav_puzzles"
            android:icon="@drawable/icon_puzzle"
            android:title="@string/text_puzzles" />

    </group>

    <group>

        <item android:title="">

            <menu>

                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/icon_home"
                    android:title="@string/text_home" />
                <!--
                <item
                    android:id="@+id/switch_theme"
                    android:icon="@drawable/icon_theme"
                    android:title="@string/text_theme" />
                -->
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/icon_share"
                    android:title="@string/text_share" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/icon_about"
                    android:title="@string/text_about" />

            </menu>

        </item>

    </group>

</menu>