<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PiecesMenuActivity">

    <ImageView
        android:id="@+id/imgRoundedSquare12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="30dp"
        android:alpha="0.1"
        android:background="@drawable/rounded_square_bg"
        android:padding="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitlePieces"
        app:layout_constraintVertical_bias="0.35" />

    <ImageButton
        android:id="@+id/backButton"
        style="@style/icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_back"
        android:onClick="backToMenu"
        android:padding="8dp"
        android:src="@drawable/icon_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitlePieces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_pieces"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <Button
        android:id="@+id/btnPiecePawn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_piece_pawn"
        app:layout_constraintEnd_toStartOf="@+id/btnPieceBishop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitlePieces" />

    <Button
        android:id="@+id/btnPieceBishop"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btn_piece_bishop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPiecePawn"
        app:layout_constraintTop_toBottomOf="@+id/txtTitlePieces" />

    <Button
        android:id="@+id/btnPieceKnight"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_piece_knight"
        app:layout_constraintEnd_toStartOf="@+id/btnPieceRook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPiecePawn" />

    <Button
        android:id="@+id/btnPieceRook"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btn_piece_rook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPieceKnight"
        app:layout_constraintTop_toBottomOf="@+id/btnPieceBishop" />

    <Button
        android:id="@+id/btnPieceQueen"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_piece_queen"
        app:layout_constraintEnd_toStartOf="@+id/btnPieceKing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPieceKnight" />

    <Button
        android:id="@+id/btnPieceKing"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btn_piece_king"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPieceQueen"
        app:layout_constraintTop_toBottomOf="@+id/btnPieceRook" />

</androidx.constraintlayout.widget.ConstraintLayout>