<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpeningDetailActivity">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/arrow_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_back"
        android:onClick="backToOpenings"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/openingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <ImageView
        android:id="@+id/imgRoundedSquare3"
        android:layout_width="375dp"
        android:layout_height="375dp"
        android:layout_marginTop="15dp"
        android:alpha="0.1"
        android:background="@drawable/rounded_square_bg"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openingTitle" />

    <ImageView
        android:id="@+id/openingImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imgRoundedSquare3"
        app:layout_constraintEnd_toEndOf="@+id/imgRoundedSquare3"
        app:layout_constraintStart_toStartOf="@+id/imgRoundedSquare3"
        app:layout_constraintTop_toTopOf="@+id/imgRoundedSquare3" />

    <Button
        android:id="@+id/backwardButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_backward"
        app:layout_constraintEnd_toStartOf="@+id/forwardButton"
        app:layout_constraintTop_toBottomOf="@+id/imgRoundedSquare3" />

    <Button
        android:id="@+id/forwardButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_forward"
        app:layout_constraintEnd_toEndOf="@+id/imgRoundedSquare3"
        app:layout_constraintTop_toBottomOf="@+id/imgRoundedSquare3" />


</androidx.constraintlayout.widget.ConstraintLayout>
